--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git测试
-
-    </title>
+    <title>git测试</title>
+    <style>
+        #box {
+            width: 500px;
+            height: 500px;
+            background-color: red;
+        }
+    </style>
 </head>
+
 <body>
     <div id="box"></div>
 </body>
+
 </html>
