--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
             height: 500px;
             background-color: red;
         }
+        #box2 {
+            width: 400px;
+            height: 400px;
+            background-color: yellow;
+        }
     </style>
 </head>
 
 <body>
     <div id="box"></div>
+    <div id="box2"></div>
 </body>
 
 </html>
