--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             height: 500px;
             background-color: red;
         }
+
         #box2 {
             width: 400px;
             height: 400px;
@@ -22,7 +23,9 @@
 
 <body>
     <div id="box"></div>
-    <div id="box2"></div>
+    <div id="box2">
+        master分支新增句子
+    </div>
 </body>
 
 </html>
