--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-    <div id="box"></div>
+    <div id="box">
+        test-index 新增一句话
+    </div>
     <div id="box2"></div>
 </body>
 
