--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             height: 500px;
             background-color: red;
         }
+
         #box2 {
             width: 400px;
             height: 400px;
@@ -21,9 +22,7 @@
 </head>
 
 <body>
-    <div id="box">
-        test-index 新增一句话
-    </div>
+    <div id="box"></div>
     <div id="box2"></div>
 </body>
 
