浏览器GitHub新增的一句话

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
     <div id="box">master 新增一句话</div>
     <div id="box2">test-index新增一句话</div>
+    <div id="box2">浏览器GitHub新增一句话</div>
 </body>
 
 </html>
