user2在vs-code中添加了一句话

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <body>
     <div id="box">master 新增一句话</div>
     <div id="box2">test-index新增一句话</div>
-    <div id="box2">浏览器GitHub新增一句话</div>
+    <div id="box3">浏览器GitHub新增一句话</div>
+    <div id="box4">user2 在vs-code里面新增一句话</div>
 </body>
 
 </html>
