--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="box4">user2 在vs-code里面新增一句话</div>
     <div id="box5">常笑言在vs-code里面做出的第一次修改</div>
     <div id="box6">常笑言在GitHub账号内里面做出的第一次修改</div>
+    <div id="box7">GitHub更新</div>
 </body>
 
 </html>
